Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-93868

Fix unnoticed regression after merging the fix for UNC path handling

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.1.2, 6.2.0 Alpha
    • 5.15, 6.0, 6.1, 6.2
    • Core: I/O
    • None
    • Windows
    • 5
    • 0564ebdb3641d7325f73dbbf2cbb04e6dca92d83 (qt/qtbase/dev) 915dd3166ad38884dd57c1e439611201d924dc4c (qt/qtbase/6.1)
    • Qt6_Foundation_Sprint 34

      The patch in https://codereview.qt-project.org/c/qt/qtbase/+/246140 has introduced a regression for UNC path handling for a given path with slashes. The former implementation did remove the //?/UNC/ and //?/ prefixes in QFileSystemEntry::resolveFilePath(), this is now missing and therefor the output of QDir::cleanPath() is different then when the path is given with native separators.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            heimrich Karsten Heimrich
            heimrich Karsten Heimrich
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes